# agent_inspect

./: .gitignore  README.md  REAME.md  analyse_logs.ipynb  directories_task.py  experiment_runner.py  hello_world.ipynb  pyproject.toml  rename_eval_to_zip.ps1  scorers.py  theory.py  utils.py
logs/: 2025-01-23T18-20-21+01-00_theory-of-mind_eYoxNnnkULiSgZsxNpzCzm.eval  2025-01-23T21-55-29+01-00_nested-dirs-challenge-wrong-qa-solver.eval  2025-01-23T23-52-05+01-00_nested-dirs-challenge_L2eRcBSTbaaeD9mqdL5Enz.eval  2025-01-23T23-54-54+01-00_nested-dirs-challenge_3P7DunTWCcAcJwSBpTVrck.eval  2025-01-24T00-09-56+01-00_nested-dirs-challenge_6p4cN4kZMHcJjpYxUx5n7S.eval  2025-01-24T00-35-37+01-00_nested-dirs-challenge_WXDAFup7VopHpWRx6xF56i.eval  2025-01-24T00-39-06+01-00_nested-dirs-challenge_7Qk5iJFiZRupXFuf3Czz9F.eval  2025-01-24T01-46-58+01-00_nested-dirs-challenge_HUUtaXk9Xiy87cki4jXCZf.eval  2025-01-24T01-49-05+01-00_nested-dirs-challenge_P7fn7e7W2QkvPJtM3dPgQN.eval  2025-01-24T01-53-19+01-00_nested-dirs-challenge_2fJdpLUDUo2gf5w9Gd9JJP.eval  2025-01-24T01-57-37+01-00_nested-dirs-challenge_AGzBadikiTgsTVUiWVQ9BD.eval
