[tool.poetry]
name = "llm-evaluation-framework"
version = "0.1.0"
description = "LLM evaluation framework using AISI Inspect"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.0"
matplotlib = "^3.7.0"
openpyxl = "^3.1.0"
seaborn = "^0.12.0"
inspect-ai = "^0.1.0"  # Replace with the correct version

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 